[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threads-pipeline"
version = "0.1.0"
description = "Threads API operations & post advisor (CLI-Anything compatible)"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "azuma520"}]
keywords = ["threads", "meta", "cli", "agent", "social-media"]

dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
threads-advisor      = "threads_pipeline.advisor:main"
threads              = "threads_pipeline.threads_cli.cli:main"
cli-anything-threads = "threads_pipeline.threads_cli.cli:main"

[project.urls]
Homepage   = "https://github.com/azuma520/threads_pipeline"
Repository = "https://github.com/azuma520/threads_pipeline"
Issues     = "https://github.com/azuma520/threads_pipeline/issues"

# ─────────────────────────────────────────────────
# 扁平 layout 的 package 設定
# 明示 packages list，不用 find（避免把 tests/ scripts/ 等誤當 package）
# ─────────────────────────────────────────────────
[tool.setuptools]
package-dir = {"threads_pipeline" = ".", "threads_pipeline.threads_cli" = "threads_cli"}
packages = ["threads_pipeline", "threads_pipeline.threads_cli"]

[tool.setuptools.package-data]
"threads_pipeline" = ["templates/*.j2", "references/*.md"]
"threads_pipeline.threads_cli" = ["SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
